to fix the blur image on mobile

--- a/templates/css/mobile.css
+++ b/templates/css/mobile.css
@@ -537,7 +537,7 @@
         padding: 20px 15px;
     }
     .box_editProfile h3 {
-        font-size: 18px;
+        font-size: 14px;
         margin-bottom: 10px;
     }
     .content_profile section {
